# A-B_Testing_Experimentation_Pipeline

./: .gitignore  Makefile  README.md  pyproject.toml
dashboard/: app.py
sql/: daily_metrics.sql  experiment_conversions.sql  experiment_exposures.sql  staging_events.sql  summary_metrics.sql
src/ab_testing_pipeline/: analysis.py  cli.py  config.py  dashboard_data.py  data_generation.py  pipeline.py  quality.py
tests/: test_dashboard_data.py  test_pipeline.py
