[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ab-testing-experimentation-pipeline"
version = "0.1.0"
description = "A/B testing data engineering project with ETL, warehousing, and experiment analytics."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.1.0",
  "pandas>=2.2.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
ab-pipeline = "ab_testing_pipeline.cli:run"

[tool.setuptools.packages.find]
where = ["src"]
